@@ -1,5 +1,7 @@
 package com.jomra.ai.agents;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 public class Action {
@@ -19,21 +21,27 @@ public class Action {
 
     public static Action openApp(String packageName) {
         return new Action("OPEN_APP", "Open application",
-            Map.of("package", packageName));
+            Collections.singletonMap("package", (Object) packageName));
     }
 
     public static Action sendMessage(String recipient, String message) {
-        return new Action("SEND_MESSAGE", "Send message",
-            Map.of("recipient", recipient, "message", message));
+        Map<String, Object> params = new HashMap<>();
+        params.put("recipient", recipient);
+        params.put("message", message);
+        return new Action("SEND_MESSAGE", "Send message", params);
     }
 
     public static Action setReminder(String title, long timestampMs) {
-        return new Action("SET_REMINDER", "Set reminder",
-            Map.of("title", title, "timestamp", timestampMs));
+        Map<String, Object> params = new HashMap<>();
+        params.put("title", title);
+        params.put("timestamp", timestampMs);
+        return new Action("SET_REMINDER", "Set reminder", params);
     }
 
     public static Action useTool(String toolName, Map<String, Object> params) {
-        return new Action("USE_TOOL", "Execute tool: " + toolName,
-            Map.of("tool", toolName, "params", params));
+        Map<String, Object> allParams = new HashMap<>();
+        allParams.put("tool", toolName);
+        allParams.put("params", params);
+        return new Action("USE_TOOL", "Execute tool: " + toolName, allParams);
     }
 }
